# Signal_class_det

./: .env.example.txt  .env.txt  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: data.xlsx
models/: best_model.pth
src/: config.py  data.py  model.py  train.py
